--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <script src="build/js/jquery.min.js"></script>
   <script src="build/js/bootstrap.min.js"></script>
   <script src="build/js/jquery.bootstrap-touchspin.min.js"></script>
-  <script src="build/js/app.min.js"></script>
+  <script src="build/js/App.js"></script>
   <script>
     $('.amount').TouchSpin({
       min: 1,
